--- a/spellBook/public/stylesheets/home.css
+++ b/spellBook/public/stylesheets/home.css
@@ -5,8 +5,7 @@
 }
 /* AUTORES */
 main{
-    margin: 100px auto;
-
+    margin: 100px 0;
 }
 
 /* TITULO */
@@ -143,6 +142,8 @@ h4 {
 
 .month-selection .book {
   margin-top: 0;
+  width: 20%;
+  height: 80%;
 }
 
 h3{
@@ -167,6 +168,7 @@ h5 {
   justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
+  
   
 }
 
@@ -400,19 +402,21 @@ h5 {
     display: block;
     width: 100%;
     margin-top: 3rem;
+    
   }
   .slider input {
     display: none;
   }
   .testimonials {
-    margin-bottom: 1rem;
+    margin: 8rem 0 1rem 0;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
     min-height: 400px;
-    perspective: 1000px;
+    perspective: 450px;
     overflow: hidden;
+    
   }
   .testimonials .item {
     background-color: transparent;
