--- a/spellBook/public/stylesheets/footer.css
+++ b/spellBook/public/stylesheets/footer.css
@@ -14,6 +14,10 @@ footer {
 }
 footer a{
     color: var(--color-beige);
+    margin: 0.2rem 0;
+    letter-spacing: 0.1rem;
+    font-weight: normal;
+    font-size: 1rem;
 }
 
 .footer-main {
