alineado banner secure buy

--- a/spellBook/src/views/index.ejs
+++ b/spellBook/src/views/index.ejs
@@ -163,8 +163,8 @@
  </main>
  <hr>
  <section class="secure-buy-conteiner">
-  <div class="secure-buy-icon secure-buy-item">
-    <i class="fas fa-check-circle"></i>
+  <div class="secure-buy-item">
+    <i class="secure-buy-icon fas fa-check-circle"></i>
     <h5>Compra Segura</h5>
   </div>
   <div class="secure-buy-item">
