--- a/spellBook/public/stylesheets/register.css
+++ b/spellBook/public/stylesheets/register.css
@@ -55,8 +55,8 @@ main{
         padding:8px 12px;
         margin:20px 30px 100px 0px;
         font-family: var(--font-roboto);
-        border:2px solid darkred;
-        background: darkred;
+        border:2px solid rgba(129, 0, 0, 0.705);
+        background: rgba(129, 0, 0, 0.705);
         color: var(--color-beige);
         cursor:pointer;transition:all .3s;
         border-radius: 5px;
@@ -69,8 +69,15 @@ main{
 .profile-input-img:focus{
     border-bottom: 0;
 }
-
-
+ .profile-data-email{
+     text-align: center;
+ }
+.user-data-avatar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
  @media (min-width: 768px) {
 
 
@@ -86,14 +93,13 @@ main{
         max-width: 80%;
     }
     .user-image{
-        width: 80%;
+        width: 100%;
         margin: 0;
     }
     .user-image-item{
-        width: 80%;
+        width: 100%;
         margin-bottom: 10%;
         border-radius: 50%;
-        max-width: 20%;
     }
     .user-card {
         display: flex;
@@ -108,8 +114,8 @@ main{
     }
   
     .user-image-item{
-       margin:0;
-        border-radius: 50%;
+       margin-right: 5%;
+    border-radius: 50%;
     }
 
     .user-profile{
