arreglando hr, vistar edit user, novelties,  links...

--- a/spellBook/public/stylesheets/admin.css
+++ b/spellBook/public/stylesheets/admin.css
@@ -307,10 +307,15 @@ form#product fieldset input.display-shop{
 }
 .headline-admin{
     font-size: 3rem;
+    margin-top: 4rem;
 }
 
 .admin-libros{
     margin: 0;
+}
+.admin-bookTitle{
+    text-align: center;
+    font-weight: bold;
 }
 
 @media (min-width: 515px) {
@@ -334,7 +339,7 @@ form#product fieldset input.display-shop{
     }
     .description-on{
         display: table-cell;
-        width: 45%;
+        width: 30%;
     }
     .edit-container {
         display: flex;
