--- a/spellBook/src/views/admin/admin.ejs
+++ b/spellBook/src/views/admin/admin.ejs
@@ -84,7 +84,7 @@
                           <td class="description-on"><a href="/product/<%= book.id %>">
                               <%= book.description.slice(0 , 200) %> ...
                             </a></td>
-                          <td><a href="/product/<%= book.id %>">
+                          <td class="admin-bookTitle"><a href="/product/<%= book.id %>">
                               <%= book.title%>
                             </a></td>
                           <td><a href="/product/<%= book.id %>">
