--- a/spellBook/src/views/admin/adminSearch.ejs
+++ b/spellBook/src/views/admin/adminSearch.ejs
@@ -9,7 +9,7 @@
           <!-- MODAL DE ACEPTAR CLEAR -->
         <div class="modal-container" id="modal-clear-product">
             <div class="modal-body">
-            <p>¿Estas seguro de eliminar el producto?</p>
+            <p>¿Estás seguro de eliminar el producto?</p>
             <div class="modal-action">
                 <button class="modal-button" id="modal-button-clear-product">Eliminar</button>
                 <button class="modal-button" id="modal-button-cancel-clear-product">Cancelar</button>
@@ -19,7 +19,7 @@
         <!-- MODAL DE ACEPTAR CREACIÓN DE PRODUCTO-->
         <div class="modal-container" id="modal-submit-product">
             <div class="modal-body">
-            <p>¿Estas seguro de guardar este producto?</p>
+            <p>¿Estás seguro de guardar este producto?</p>
             <div class="modal-action">
                 <button class="modal-button" id="modal-button-submit-product">Guardar</button>
                 <button class="modal-button" id="modal-button-cancel-product">Cancelar</button>
@@ -60,7 +60,7 @@
                         <thead>
                             <tr class="head-table">
                                 <th>Imagen</th>
-                                <th class="description-on">Descripcion</th>
+                                <th class="description-on">Descripción</th>
                                 <th>Título</th>
                                 <th>Cantidad</th>
                                 <th>Precio</th>
