--- a/spellBook/src/views/admin/userAdmin.ejs
+++ b/spellBook/src/views/admin/userAdmin.ejs
@@ -21,14 +21,9 @@
     <!--LIST OF PRODUCTS SECTION-->
     <section class="product-list">
       <!--LINKS TO Agregar libro, Bell AND user-->
-      <h1>Hola </h1>
+      <h1 class="headline-admin">Panel de Control: Usuarios</h1>
       <div class="belluser">
         <a href="/admin/addProduct" class="display-shop" >Ir a libros</a>
-        <a href="/user/login">
-          <div class="">
-            <i class="far fa-bell" id="icon"></i>
-          </div>
-        </a>
         <a href="/user/login">
           <div class="">
             <i class="far fa-user" id="icon"></i>
