--- a/spellBook/src/views/products/novelties.ejs
+++ b/spellBook/src/views/products/novelties.ejs
@@ -33,7 +33,7 @@
           <span class="nov-price">$ <%= book.price %> </span>
         </div>
       </div>
-      <hr class=" one-line">
+      <hr class="one-line">
   <% } else { %>
     <div class="nov-product" >
       <div class="nov-description">
@@ -72,7 +72,7 @@
   </div>
 
   
-    <p class="m-1">Somos fanaticos de la lectura y lo fantastico.. </p>
+    <p class="m-1">Somos fanáticos de la lectura y lo fantástico... </p>
   
   <p class="m-1">Por ello te brindamos esta sección que elegimos nosotros mismos para que disfrutes.</p>
 
@@ -128,18 +128,8 @@
   </div>
 <section>
   <div class="m-1 text-center">
-    <p>Tambien queremos mostrarte los MAS BUSCADOS por los amantes de la magia y fantasia.</p>
+    <p>Queremos mostrarte los MÁS BUSCADOS por los amantes de la magia y fantasía...</p>
    </div>
-   <div  class="m-1 text-center">
-     <p>Que no te sorprenda que algunos coincidan con la selección de arriba. </p>
-     <br>
-     <p>Que te pudedo decir...</p>
-   </div>
-   <div class="m-1 text-center">
-     <p>TENEMOS BUEN GUSTO!!!!   🤓🤓</p>
-   </div>
-   <br>
-   <br> 
 </section>
   <% booksRecommended.forEach((book, i) => { %>
     <% if (i % 2 == 0) { %>
