--- a/spellBook/public/stylesheets/novelties.css
+++ b/spellBook/public/stylesheets/novelties.css
@@ -7,7 +7,7 @@ p{
 p.m-1{
     margin: 50px auto;
     width: 80%;
-    font-size: 2rem;
+    font-size: 1.5rem;
     line-height: 40px;
     text-align: center;
     font-weight: bolder;
@@ -29,7 +29,7 @@ p.m-1{
 }
 
 .nov-book {
-  margin: 0.5rem 2rem;
+  /* margin: 0.5rem 2rem; */
   display: flex;
   align-items: center;
 }
@@ -48,17 +48,19 @@ p.m-1{
 }
 .nov-text{
     flex-basis: 40%;
+    margin-bottom: 20px;
 }
 .nov-text-d{
     display: none;
 }
 .nov-autor{
-    align-self: flex-end;
-    font-size: 0.8rem;
+    font-size: 1rem;
+    margin-bottom: 5px;
 }
 .nov-price {
     font-size: 1rem;
-    color: var(--color-azulClaro);
+    color: var(--color-violeta);
+    font-weight: bold;
 }
 
 .books__img{
@@ -68,22 +70,21 @@ p.m-1{
     
 }
 
-@media (min-width:500px){
-    .nov-description {
-        flex-basis: 60%;
-    }
-    .nov-price{
-        position: absolute;
-        left: 40%;
-        top: 90%;
-    }
-    .nov-text{
-        display: none;
-    }
-    .nov-text-d{
-        display: block;
-    }
+.nov-priceAuthor{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
 }
+
 @media (min-width: 768px){
+    .nov-priceAuthor{
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+    }
 
 }
