--- a/spellBook/public/stylesheets/modals.css
+++ b/spellBook/public/stylesheets/modals.css
@@ -19,6 +19,7 @@
     padding: 10px;
     text-align: center;
     width: fit-content;
+    min-width: 200px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
