--- a/spellBook/public/stylesheets/admin.css
+++ b/spellBook/public/stylesheets/admin.css
@@ -57,7 +57,7 @@ section .belluser{
     border: none;
     box-shadow:var(--box-shadow-button);
     color: var(--color-azulOscuro);
-    padding: 5px 1px;
+    padding: 5px 10px;
     width: 10rem;
     text-align: center;
     cursor: pointer;
@@ -207,13 +207,18 @@ form#product input#image{
 }
 .product-inputs{
     background-color: transparent;
+    color: var(--color-beige);
     border: none;
     border-bottom: 2px solid var(--color-azulOscuro);
     font-size: 0.8rem;
-    width: 90%;
+    width: 70%;
     align-items: flex-end;
     text-align: center;
 }
+.product-inputs:focus{
+    background-color: transparent;
+}
+
 form#product fieldset select{
     width: 60%;
     text-align: center;
