--- a/spellBook/public/stylesheets/register.css
+++ b/spellBook/public/stylesheets/register.css
@@ -110,7 +110,7 @@ main{
     }
     .profile-data-name{
         font-size: 3.5rem;
-        margin-bottom: 10%;
+        margin-bottom: 30px;
     }
   
     .user-image-item{
