--- a/spellBook/src/views/admin/adminSearch.ejs
+++ b/spellBook/src/views/admin/adminSearch.ejs
@@ -30,16 +30,11 @@
             <!--LIST OF PRODUCTS SECTION-->
             <section class="product-list">
                 <!--LINKS TO Agregar libro, Bell AND user-->
-                <h1>Hola <%= /* locals.userLog.name */ %>
+                <h1 class ="headline-admin">Panel de control
                 </h1>
                 <div class="belluser">
                     <a href="/admin/users" class="display-shop">Ir a usuarios</a>
                     <button class="display-shop" id="button-create">Agregar libro</button>
-                    <a href="/user/login">
-                        <div class="">
-                            <i class="far fa-bell" id="icon"></i>
-                        </div>
-                    </a>
                     <a href="/user/login">
                         <div class="">
                             <i class="far fa-user" id="icon"></i>
@@ -96,117 +91,118 @@
                     </table>
                 </div>
             </section>
-            <!-- CREATE FORM -->
-      <section class="product-form">
-        <div class="internal-modal">
-          <div class="close-create">
-            <i class="fas fa-times" id="icon" aria-hidden="true"></i>
-          </div>
-          <div class="add-btn">
-            <h2 id="shop-form">Agregar libro</h2>
-          </div>
-          <div class="errors">
-          </div>
-          <form method="POST" action="/admin/addProduct" enctype="multipart/form-data" id="product">
-            <fieldset>
-              <label for="titulo">Título:</label>
-              <div class="cont-flex-column">
-                <input class="product-inputs" type="text" name="titulo" id="titulo" />
-                <p class="warning" id="titulo-error"></p>
+            <section class="product-form">
+              <div class="internal-modal">
+                <div class="close-create">
+                  <i class="fas fa-times" id="icon" aria-hidden="true"></i>
+                </div>
+                <div class="add-btn">
+                  <h2 id="shop-form">Agregar libro</h2>
+                </div>
+                <div class="errors">
+                </div>
+                <form method="POST" action="/admin/addProduct" enctype="multipart/form-data" id="product">
+                  <div class="" id="img-preview">
+                  </div>
+                  <fieldset>
+                    <label class="create-form-labels" for="image">Imagen:</label>
+                    <div class="create-form-content-inputs">
+                      <input class="product-inputs" type="file" name="imagen" id="image" />
+                      <p class="warning" id="image-error"></p>
+                    </div>
+                  </fieldset>
+                  <fieldset>
+                    <label class="create-form-labels" for="titulo">Título:</label>
+                    <div class="create-form-content-inputs">
+                      <input class="product-inputs" type="text" name="titulo" id="titulo" />
+                      <p class="warning" id="titulo-error"></p>
+                    </div>
+      
+                  </fieldset>
+                  <fieldset>
+                    <label class="create-form-labels" for="autor">Autor:</label>
+                    <div class="create-form-content-inputs">
+                      <select name="autor" id="autor" class="create-form-select">
+                        <% authors.forEach(author=> { %>
+                          <option value="<%= author.id %>">
+                            <%= author.name %>
+                          </option>
+                          <% }); %>
+                      </select>
+                    </div>
+                  </fieldset>
+                  <fieldset>
+                    <label class="create-form-labels" for="amount">Stock:</label>
+                    <div class="create-form-content-inputs">
+                      <input class="product-inputs" type="number" name="cantidad" id="amount" min="0" pattern="^[0-9]+" />
+                      <p class="warning" id="cantidad-error"></p>
+                    </div>
+                  </fieldset>
+                  <fieldset>
+                    <label class="create-form-labels" for="precio">Precio:</label>
+      
+                    <div class="create-form-content-inputs">
+                      <input class="product-inputs" type="number" id="precio" name="precio" min="0" pattern="^[0-9]+" />
+                      <p class="warning" id="precio-error"></p>
+                    </div>
+                  </fieldset>
+                  <fieldset>
+                    <label class="create-form-labels" for="recommended_age">Edad Recomendada:</label>
+                    <div class="create-form-content-inputs">
+                      <select name="recommended_age" id="recommended_age" class="create-form-select">
+                        <% recommended_age.forEach(age=> { %>
+                          <option value="<%= age.id %>">
+                            <%= age.age %>
+                          </option>
+                          <% }); %>
+                      </select>
+                    </div>
+      
+                  </fieldset>
+                  <fieldset>
+                    <label class="create-form-labels" for="publisher">Editorial:</label>
+                    <div class="create-form-content-inputs">
+                      <input class="product-inputs" type="text" name="publisher" id="publisher"  />
+                      <p class="warning" id="publisher-error"></p>
+                    </div>
+                  </fieldset>
+                  <fieldset>
+                    <label class="create-form-labels" for="language">Idioma:</label>
+                    <div class="create-form-content-inputs">
+                      <input class="product-inputs" type="text" name="language" id="language" />
+                      <p class="warning" id="language-error"></p>
+                    </div>
+                  </fieldset>
+                  <fieldset>
+                    <label class="create-form-labels" for="publication_year">Año de Publicación:</label>
+                    <div class="create-form-content-inputs">
+                      <input class="product-inputs" type="number" name="publication_year" id="publication_year" min="1" pattern="^[0-9]+" />
+                      <p class="warning" id="publication_year-error"></p>
+                    </div>
+                  </fieldset>
+                  <fieldset>
+                    <label class="create-form-labels" for="pages">Nro de Páginas:</label>
+                    <div class="create-form-content-inputs">
+                      <input class="product-inputs" type="number" name="pages" id="pages" min="1" pattern="^[0-9]+"/>
+                      <p class="warning" id="pages-error"></p>
+                    </div>
+                  </fieldset>
+                  <fieldset>
+                    <label class="create-form-labels" for="description">Descripción:</label>
+                    <div class="create-form-content-inputs">
+                      <input class="product-inputs" type="textarea" name="descripcion" id="description" cols="30" rows="8" />
+                      <p class="warning" id="description-error"></p>
+                    </div>
+                  </fieldset>
+                  <fieldset>
+                    <button class="display-shop button" type="reset" id="cancel"> Cancelar </button>
+                    <button class="display-shop" type="submit"> Guardar</button>
+                  </fieldset>
+                  <p class="warning" id="submit-error"></p>
+      
+                </form>
               </div>
-
-            </fieldset>
-            <fieldset>
-              <label for="autor">Autor:</label>
-              <div class="cont-flex-column">
-                <select name="autor" id="autor" class="select-fcm border-fcm">
-                  <% authors.forEach(author=> { %>
-                    <option value="<%= author.id %>">
-                      <%= author.name %>
-                    </option>
-                    <% }); %>
-                </select>
-              </div>
-            </fieldset>
-            <fieldset>
-              <label for="amount">Stock:</label>
-              <div class="cont-flex-column">
-                <input class="product-inputs" type="number" name="cantidad" id="amount" min="0" pattern="^[0-9]+" />
-                <p class="warning" id="cantidad-error"></p>
-              </div>
-            </fieldset>
-            <fieldset>
-              <label for="precio">Precio:</label>
-
-              <div class="cont-flex-column">
-                <input class="product-inputs" type="number" id="precio" name="precio" min="0" pattern="^[0-9]+" />
-                <p class="warning" id="precio-error"></p>
-              </div>
-            </fieldset>
-            <fieldset>
-              <label for="recommended_age">Edad Recomendada:</label>
-              <div class="cont-flex-column">
-                <select name="recommended_age" id="recommended_age" class="select-fcm border-fcm">
-                  <% recommended_age.forEach(age=> { %>
-                    <option value="<%= age.id %>">
-                      <%= age.age %>
-                    </option>
-                    <% }); %>
-                </select>
-              </div>
-
-            </fieldset>
-            <fieldset>
-              <label for="publisher">Editorial:</label>
-              <div class="cont-flex-column">
-                <input class="product-inputs" type="text" name="publisher" id="publisher"  />
-                <p class="warning" id="publisher-error"></p>
-              </div>
-            </fieldset>
-            <fieldset>
-              <label for="language">Idioma:</label>
-              <div class="cont-flex-column">
-                <input class="product-inputs" type="text" name="language" id="language" />
-                <p class="warning" id="language-error"></p>
-              </div>
-            </fieldset>
-            <fieldset>
-              <label for="publication_year">Año de Publicación:</label>
-              <div class="cont-flex-column">
-                <input class="product-inputs" type="number" name="publication_year" id="publication_year" min="1" pattern="^[0-9]+" />
-                <p class="warning" id="publication_year-error"></p>
-              </div>
-            </fieldset>
-            <fieldset>
-              <label for="pages">Nro de Páginas:</label>
-              <div class="cont-flex-column">
-                <input class="product-inputs" type="number" name="pages" id="pages" min="1" pattern="^[0-9]+"/>
-                <p class="warning" id="pages-error"></p>
-              </div>
-            </fieldset>
-            <fieldset>
-              <label for="image">Imagen:</label>
-              <div class="cont-flex-column">
-                <input class="product-inputs" type="file" name="imagen" id="image" />
-                <p class="warning" id="image-error"></p>
-              </div>
-            </fieldset>
-            <fieldset>
-              <label for="description">Descripción:</label>
-              <div class="cont-flex-column">
-                <input class="product-inputs" type="textarea" name="descripcion" id="description" cols="30" rows="8" />
-                <p class="warning" id="description-error"></p>
-              </div>
-            </fieldset>
-            <fieldset>
-              <button class="display-shop button" type="reset" id="cancel"> Cancelar </button>
-              <button class="display-shop" type="submit"> Guardar</button>
-            </fieldset>
-            <p class="warning" id="submit-error"></p>
-
-          </form>
-        </div>
-      </section>
+            </section>
         </main>
     </body>
     <script src="/js/admin.js"></script>
