--- a/spellBook/public/stylesheets/header.css
+++ b/spellBook/public/stylesheets/header.css
@@ -95,6 +95,16 @@
 .wizard {
   width: 1.3rem;
   cursor: pointer;
+
+}
+.inLog{
+  background-color: lightgreen;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  right: -5px;
+  bottom: -4px;
 }
 .search {
   position: absolute;
